welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: not found: value ==
    case a == b => return 0
           ^close10:4: error: not found: value <
    case Math.abs(10-b)<Math.abs(10-a) => return a
                       ^close10:4: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(10-b)<Math.abs(10-a) => return a
              ^close10:4: error: not found: value -
    case Math.abs(10-b)<Math.abs(10-a) => return a
                    ^close10:4: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(10-b)<Math.abs(10-a) => return a
                             ^close10:4: error: not found: value -
    case Math.abs(10-b)<Math.abs(10-a) => return a
                                   ^close10:5: error: not found: value >
    case Math.abs(10-b)>Math.abs(10-a) => return b
                       ^close10:5: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(10-b)>Math.abs(10-a) => return b
              ^close10:5: error: not found: value -
    case Math.abs(10-b)>Math.abs(10-a) => return b
                    ^close10:5: error: value abs is not a case class, nor does it have an unapply/unapplySeq member
    case Math.abs(10-b)>Math.abs(10-a) => return b
                             ^close10:5: error: not found: value -
    case Math.abs(10-b)>Math.abs(10-a) => return b
                                   ^